--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <p>Hello, world!</p>
+          <h1>Im Not Writing Your Website Out For You Here Too</h1>
+          <h2>I Don’t Care About Your Background</h2>
+          <h2>Founders</h2>
+          <h3>Some Guy</h3>
+          <h3>Some Other Guy?</h3>
+          <h3>Yet Another Guy</h3>
   </body>
 </html>
