--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
   </head>
   <body>
           <h1>Im Not Writing Your Website Out For You Here Too</h1>
+          <p>
+          Learn Enough to Be Dangerous is Blah <em>Blah Blah</em> Blah Blah.
+          <strong>Handy</strong> tho.
+          </p>
+          <p>
+          HTML was created by the original "web developer", computer scientist <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were.</p>
+          <img src="images/kitten.jpg" alt="An adorable kitten">
           <h2>I Don’t Care About Your Background</h2>
           <h2>Founders</h2>
+          <p> LEtBD was founded in 20XX by some guys. Idk.
           <h3>Some Guy</h3>
           <h3>Some Other Guy?</h3>
           <h3>Yet Another Guy</h3>
